apps/shop/ad/k8s/overlays/prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-ad-prod
spec:
  host: shop-ad.shop-ad.svc.cluster.local
  subsets:
  - name: shop-ad-prod
    labels:
      app: shop-ad
      env: prod
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-ad-prod-d1a
    labels:
      app: shop-ad
      env: prod
      deploy.cloud.google.com/target-id: p1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
