apps/shop/ad/k8s/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shop-ad-prod
spec:
  hosts:
  - shop-ad
  http:
  - match:
    - sourceLabels:
        app: shop-ad
        env: prod
    route:
    - destination:
        host: shop-ad
        subset: shop-ad-prod
